# cnn_detect_c-

./: CMakeLists.txt  nodelet_info.xml  nodelet_info2.xml  package.xml
include/cnn_detect/: detector.h
launch/: detect.launch
src/: detector.cpp
